<resources>
    <string name="app_name">JJstreet</string>

    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="action_log_in">LOG IN</string>
    <string name="action_sign_up">SIGN UP</string>
    <string name="action_sign_in_short">LOG IN</string>
    <string name="action_auto_login">AUTO LOGIN</string>
    <string name="action_copyright">Copyrightⓒ 2016 JJSTREET All rights reserved</string>
    <string name="error_invalid_email">E-mail이 유효하지 않습니다.</string>
    <string name="error_invalid_password">비밀번호가 유효하지 않습니다.</string>
    <string name="error_incorrect_password">비밀번호를 확인해주세요.</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
